# ChallongeSlackNotifier

./: Cargo.toml  README.md  TODO.md
src/: challonge.rs  main.rs  slack.rs
