[package]
name = "challonge-poller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", features = ["json", "blocking"]}
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.3", features = ["full"] }
chrono = { version = "0.4.22", features = ["serde"] }
rand = "0.8.5"
clap = { version = "4.0.26", features = ["derive"] }
